# codeseeker

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
codeseeker/: __init__.py  __main__.py  analysis.py  chunking.py  cli.py  embeddings.py  index.py  llm.py  qa.py  repo.py  summary.py  vectorstore.py  webapp.py
tests/: test_analysis_summary.py  test_chunking.py  test_cli.py  test_embeddings.py  test_github_repos.py  test_index.py  test_repo.py  test_summary_qa.py  test_vectorstore.py  test_webapp.py
