[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codeseeker"
version = "0.2.0"
description = "LLM-powered semantic code search over local and remote repositories."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "codeseeker contributors" }]
keywords = ["code search", "semantic search", "embeddings", "developer tools"]
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
transformers = ["sentence-transformers>=2.2"]
faiss = ["faiss-cpu>=1.7"]
llm = ["openai>=1.0"]
web = ["flask>=2.2"]
all = ["sentence-transformers>=2.2", "faiss-cpu>=1.7", "openai>=1.0", "flask>=2.2"]
dev = ["pytest>=7.0", "faiss-cpu>=1.7", "flask>=2.2"]

[project.scripts]
codeseeker = "codeseeker.cli:main"

[project.urls]
Homepage = "https://github.com/"

[tool.setuptools]
packages = ["codeseeker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
